--- a/album.html
+++ b/album.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Álbum de Los LCDM</title>
+<title>LCDM COLECCION</title>
 <link rel="stylesheet" href="style.css">
 
 <style>
@@ -88,7 +88,7 @@
 <!-- Barra superior -->
 <div id="barra-superior">
     <span id="usuarioActivo"></span>
-    <span id="contador">0 / 5 figuritas</span>
+    <span id="contador">0 / 5 Coleccion</span>
     <div style="position: relative; display: inline-block;">
         <button id="btnAyuda">Ayuda</button>
         <div id="tooltipAyuda">
@@ -112,14 +112,14 @@
 
 <!-- Álbum -->
 <div id="album-container">
-    <h1>Mi Álbum de Figuritas</h1>
+    <h1>Mi Propia Coleccion</h1>
     <div class="figuritas" id="figuritasContainer"></div>
 </div>
 
 <!-- Escaneo QR -->
 <div class="qr-section">
     <div id="qr-reader"></div>
-    <button id="btnScanQR" onclick="iniciarScanner()">&#128247; Escanear QR</button>
+    <button id="btnScanQR" onclick="iniciarScanner()">&#128247; Coleccionar QR</button>
 </div>
 
 <!-- Toast -->
