--- a/panel.html
+++ b/panel.html
@@ -3,61 +3,125 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Panel Cofundador</title>
+<title>Panel Admin LCDM</title>
 <link rel="stylesheet" href="style.css">
+<style>
+body { background:#111; color:#fff; font-family:sans-serif; text-align:center; }
+.panel-container { max-width:1000px; margin:20px auto; padding:20px; background:#222; border-radius:12px; }
+.user-item { display:flex; align-items:center; justify-content:space-between; padding:6px 12px; background:#111; border-radius:6px; margin-bottom:4px; }
+.user-item img { width:30px; height:30px; border-radius:50%; margin-right:6px; object-fit:cover; border:1px solid gold; }
+.user-item button { padding:2px 6px; border:none; border-radius:4px; background:gold; color:black; cursor:pointer; margin-left:4px; }
+#loginAdmin { display:flex; flex-direction:column; align-items:center; gap:6px; margin-top:50px; }
+#loginAdmin input { padding:6px 8px; border-radius:6px; border:none; }
+</style>
 </head>
 <body>
-<div style="max-width:1000px;margin:20px auto;padding:20px;background:#111;border-radius:12px">
+
+<div class="panel-container" id="adminPanel" style="display:none;">
   <a href="album.html">← Volver</a>
-  <h1>Panel Cofundador (Demo)</h1>
+  <h1>Panel Admin / Cofundador</h1>
   <div id="stats"></div>
-  <h3>Usuarios</h3>
-  <div id="usersList" style="display:flex;flex-direction:column;gap:6px"></div>
-  <div style="margin-top:12px">
-    <button id="btnResetAll">Resetear demo (borrar usuarios)</button>
-    <button id="btnExport">Exportar usuarios (console)</button>
+  <h3>Usuarios registrados</h3>
+  <div id="usersList"></div>
+  <div style="margin-top:12px;">
+    <button id="btnResetAll">Resetear todos los usuarios</button>
+    <button id="btnExport">Exportar usuarios (consola)</button>
   </div>
 </div>
 
+<!-- Login Admin -->
+<div id="loginAdmin">
+  <h2>Acceso Admin</h2>
+  <input type="text" id="loginUsuario" placeholder="Usuario">
+  <input type="password" id="loginClave" placeholder="Clave">
+  <button id="btnLogin">Ingresar</button>
+</div>
+
 <script>
-const active = localStorage.getItem('usuarioActivo');
-if(active !== 'admin' && active !== 'cofundador'){
-  alert('Acceso restringido: iniciá sesión como admin o cofundador (demo)');
-  window.location.href = 'album.html';
-}
+// ===== Crear admin inicial =====
+let admin = JSON.parse(localStorage.getItem('usuario_admin')) || {nombre:'admin', clave:'admin123'};
+localStorage.setItem('usuario_admin', JSON.stringify(admin));
 
-function mostrarStats(){
-  let totalUsuarios=0; let totalFig=0; let totalCoins=0;
-  const list = document.getElementById('usersList'); list.innerHTML='';
-  for(let i=0;i<localStorage.length;i++){
-    const key = localStorage.key(i);
-    if(key.startsWith('user_')){
-      const datos = JSON.parse(localStorage.getItem(key));
-      totalUsuarios++; totalFig += (datos.figuritas||[]).length; totalCoins += (datos.coins||0);
-      const el = document.createElement('div');
-      el.innerHTML = `${datos.usuario} — figuritas: ${(datos.figuritas||[]).length} — coins: ${datos.coins||0}`;
-      list.appendChild(el);
+// ===== Login =====
+const loginDiv = document.getElementById('loginAdmin');
+const panelDiv = document.getElementById('adminPanel');
+document.getElementById('btnLogin').addEventListener('click', ()=>{
+    const u = document.getElementById('loginUsuario').value;
+    const c = document.getElementById('loginClave').value;
+    const adminData = JSON.parse(localStorage.getItem('usuario_admin'));
+    if(u===adminData.nombre && c===adminData.clave){
+        loginDiv.style.display='none';
+        panelDiv.style.display='block';
+        localStorage.setItem('usuarioActivo','admin');
+        mostrarStats();
+    } else {
+        alert('Usuario o clave incorrecta');
     }
-  }
-  document.getElementById('stats').innerHTML = `Usuarios: ${totalUsuarios} · Figuritas totales: ${totalFig} · Coins totales: ${totalCoins}`;
+});
+
+// ===== Stats y listado =====
+function mostrarStats(){
+    let totalUsuarios=0; let totalFig=0; let totalCoins=0;
+    const list = document.getElementById('usersList'); list.innerHTML='';
+    for(let i=0;i<localStorage.length;i++){
+        const key = localStorage.key(i);
+        if(key.startsWith('user_')){
+            const datos = JSON.parse(localStorage.getItem(key));
+            totalUsuarios++; totalFig += (datos.figuritas||[]).length; totalCoins += (datos.coins||0);
+            const el = document.createElement('div');
+            el.className='user-item';
+            el.innerHTML = `
+                <div style="display:flex; align-items:center;">
+                    <img src="${datos.avatar}" alt="Avatar">
+                    <span>${datos.usuario}</span>
+                </div>
+                <div>
+                    <span>${(datos.figuritas||[]).length} fig</span>
+                    <span>${datos.coins||0} coins</span>
+                    <button onclick="editarUsuario('${key}')">Editar</button>
+                </div>
+            `;
+            list.appendChild(el);
+        }
+    }
+    document.getElementById('stats').innerHTML = `Usuarios: ${totalUsuarios} · Figuritas totales: ${totalFig} · Coins totales: ${totalCoins}`;
 }
 
+// ===== Resetear usuarios =====
 document.getElementById('btnResetAll').addEventListener('click', ()=>{
-  if(confirm('Borrar todos los users?')){
-    const keys = [];
-    for(let i=0;i<localStorage.length;i++){ const k = localStorage.key(i); if(k && k.startsWith('user_')) keys.push(k); }
-    keys.forEach(k=> localStorage.removeItem(k));
-    alert('Usuarios eliminados'); location.reload();
-  }
+    if(confirm('Borrar todos los usuarios?')){
+        const keys = [];
+        for(let i=0;i<localStorage.length;i++){
+            const k = localStorage.key(i);
+            if(k.startsWith('user_')) keys.push(k);
+        }
+        keys.forEach(k=> localStorage.removeItem(k));
+        alert('Usuarios eliminados'); mostrarStats();
+    }
 });
 
+// ===== Exportar usuarios =====
 document.getElementById('btnExport').addEventListener('click', ()=>{
-  const dump = {};
-  for(let i=0;i<localStorage.length;i++){ const k = localStorage.key(i); if(k.startsWith('user_')) dump[k] = JSON.parse(localStorage.getItem(k)); }
-  console.log('Export demo users:', dump); alert('Revisá la consola (F12)');
+    const dump = {};
+    for(let i=0;i<localStorage.length;i++){
+        const k = localStorage.key(i);
+        if(k.startsWith('user_')) dump[k] = JSON.parse(localStorage.getItem(k));
+    }
+    console.log('Usuarios export:', dump);
+    alert('Revisá la consola (F12)');
 });
 
-mostrarStats();
+// ===== Editar usuario =====
+function editarUsuario(key){
+    const datos = JSON.parse(localStorage.getItem(key));
+    const nuevoNombre = prompt("Nuevo nombre:", datos.usuario) || datos.usuario;
+    const nuevaClave = prompt("Nueva clave:", datos.clave || '') || datos.clave;
+    datos.usuario = nuevoNombre;
+    datos.clave = nuevaClave;
+    localStorage.setItem(key, JSON.stringify(datos));
+    mostrarStats();
+}
 </script>
+
 </body>
 </html>
