--- a/ranking.html
+++ b/ranking.html
@@ -8,10 +8,13 @@
 <style>
 body { font-family: sans-serif; background:#111; color:#fff; text-align:center; }
 #ranking-container { max-width:500px; margin:2rem auto; background:#222; padding:1rem; border-radius:10px; }
-.ranking-item { display:flex; align-items:center; justify-content:space-between; padding:0.5rem 1rem; border-bottom:1px solid #444; }
+.ranking-item { display:flex; align-items:center; justify-content:space-between; padding:0.5rem 1rem; border-bottom:1px solid #444; cursor:pointer; }
 .ranking-item img { width:40px; height:40px; border-radius:50%; margin-right:10px; object-fit:cover; border:1px solid gold; }
 .ranking-item span { font-size:1.2rem; }
 h1 { color:gold; text-shadow:0 0 5px #fff; }
+#perfil-publico { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#222; color:#fff; padding:2rem; border-radius:15px; z-index:10000; width:300px; text-align:center; }
+#perfil-publico img { width:80px; height:80px; border-radius:50%; border:2px solid gold; object-fit:cover; margin-bottom:10px; }
+#perfil-publico button { padding:0.5rem 1rem; margin-top:1rem; border:none; border-radius:5px; background: gold; color:black; font-weight:bold; cursor:pointer; }
 </style>
 </head>
 <body>
@@ -20,32 +23,37 @@ h1 { color:gold; text-shadow:0 0 5px #fff; }
 <div id="ranking-container"></div>
 <a href="album.html" style="color:yellow;">⬅️ Volver al Álbum</a>
 
+<!-- Overlay perfil público -->
+<div id="perfil-publico">
+  <img id="perfilPublicoAvatar" src="">
+  <h3 id="perfilPublicoNombre"></h3>
+  <p id="perfilPublicoPuntos"></p>
+  <p id="perfilPublicoBio"></p>
+  <button id="cerrarPerfilPublico">Cerrar</button>
+</div>
+
 <script>
-// ===== Datos de ejemplo =====
-// Aquí se puede guardar el ranking en localStorage o traer de tu sistema
-// Cada usuario: {nombre, avatar, puntos}
+// Cargar ranking
 let ranking = JSON.parse(localStorage.getItem('ranking')) || [];
-
-// Asegurarse de tener el usuario activo en ranking
 let usuario = JSON.parse(localStorage.getItem('usuario'));
-if(usuario){
-    let existente = ranking.find(u => u.nombre === usuario.nombre);
-    if(!existente){
-        ranking.push({nombre:usuario.nombre, avatar:usuario.avatar, puntos:0});
-    }
+if(usuario && !ranking.find(u=>u.nombre===usuario.nombre)){
+    ranking.push(usuario);
 }
-
-// Ordenar por puntos descendente
 ranking.sort((a,b)=>b.puntos - a.puntos);
 
 const contenedor = document.getElementById('ranking-container');
-contenedor.innerHTML = '';
+const perfilPublico = document.getElementById('perfil-publico');
+const cerrarPerfilPublico = document.getElementById('cerrarPerfilPublico');
+const perfilPublicoAvatar = document.getElementById('perfilPublicoAvatar');
+const perfilPublicoNombre = document.getElementById('perfilPublicoNombre');
+const perfilPublicoPuntos = document.getElementById('perfilPublicoPuntos');
+const perfilPublicoBio = document.getElementById('perfilPublicoBio');
 
-// Renderizar ranking
+contenedor.innerHTML = '';
 ranking.forEach((u,index)=>{
-    const div = document.createElement('div');
-    div.className = 'ranking-item';
-    div.innerHTML = `
+    const div=document.createElement('div');
+    div.className='ranking-item';
+    div.innerHTML=`
         <div style="display:flex; align-items:center;">
             <span>${index+1}.</span>
             <img src="${u.avatar}" alt="Avatar">
@@ -54,13 +62,21 @@ ranking.forEach((u,index)=>{
         <span>${u.puntos} pts</span>
     `;
     contenedor.appendChild(div);
+
+    div.addEventListener('click', ()=>{
+        if(u.publico){
+            perfilPublicoAvatar.src = u.avatar;
+            perfilPublicoNombre.textContent = u.nombre;
+            perfilPublicoPuntos.textContent = u.puntos+" pts";
+            perfilPublicoBio.textContent = u.bio || "";
+            perfilPublico.style.display='block';
+        } else {
+            alert('Este perfil es privado');
+        }
+    });
 });
 
-// ===== Actualizar puntos ejemplo =====
-// Cada vez que colecciones una figurita, puedes actualizar puntos así:
-// ranking[0].puntos += 10; 
-// localStorage.setItem('ranking', JSON.stringify(ranking));
+cerrarPerfilPublico.addEventListener('click', ()=>perfilPublico.style.display='none');
 </script>
-
 </body>
 </html>
